# EVOART-O

./: .gitignore  README.md  progress.md  version-1-spec.md
src/evoart_brain/: CMakeLists.txt  package.xml
src/evoart_brain/behavior_trees/: taxi_logic.xml
src/evoart_brain/config/: ekf.yaml  nav2_params.yaml  route.geojson  slam_params.yaml
src/evoart_brain/src/: aks_bridge_node.py  geojson_navigator_node.py  mock_perception_node.py  odom_tf_broadcaster.py  safety_stop_node.py  traffic_light_node.py  yolo_node.py
src/evoart_bringup/: CMakeLists.txt  package.xml
src/evoart_bringup/launch/: bringup.launch.py  rviz.launch.py  sim.launch.py  sim_full.launch.py
src/evoart_bringup/scripts/: generate_city.py
src/evoart_bringup/worlds/: teknofest_city.sdf
src/evoart_description/: package.xml
src/evoart_description/urdf/: evoart.xacro  sensors.xacro
src/evoart_interfaces/: CMakeLists.txt  package.xml
src/evoart_interfaces/msg/: TrafficStatus.msg  YoloDetection.msg
