<?xml version="1.0"?>
<package format="3">
  <name>evoart_bringup</name>
  <version>0.0.1</version>
  <description>Bringup for EVOART-O</description>
  <maintainer email="leykun@todo.todo">Leykun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core simulation -->
  <exec_depend>evoart_brain</exec_depend>
  <exec_depend>evoart_description</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Navigation 2 Stack -->
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>

  <!-- SLAM & Localization -->
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
